# 1money-reports

./: Dockerfile  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
scripts/: development.sh  production.sh  sleep.sh
scripts/development/: docker-compose.yml  sleep.sh
scripts/production/: docker-compose.yml
src/: config.py  server.py
src/transactions/: __init__.py  analytics.py  expence_aggregation.py  expence_analytics.py  source_report.py  source_report_test.py
src/transactions/files/: report.csv
web/: .prettierrc.js  package.json
web/public/: index.html
web/src/: App.js  DateRange.js  ExpenseCategorySummary.js  TransactionCard.jsx
